# agents

./: .env.test  .gitignore  .pre-commit-config.yaml  Makefile  README.md  config.yaml.example  package-lock.json  package.json  pyproject.toml
.cursor/: mcp.json
.cursor/rules/: agent_wars_frontend.mdc  general_backend_node_typescript.mdc  general_python_expert.mdc  taskmaster_workflow.mdc  tests_backend_node_typescript.mdc  tests_front_react_next.mdc
.githooks/: pre-commit
.github/workflows/: agent-wars-web.yml  agent-wars.yml
.husky/: pre-commit
.taskmaster/: config.json  config.json.bak  state.json  state.json.bak
.taskmaster/docs/: agent-wars-prd.txt  prd.txt
.taskmaster/tasks/: task_001_agent-wars-backend.txt  task_001_agent-wars.txt  task_002_agent-wars-backend.txt  task_002_agent-wars.txt  task_003_agent-wars-backend.txt  task_003_agent-wars.txt  task_004_agent-wars-frontend.txt  task_004_agent-wars.txt  task_005_agent-wars-frontend.txt  task_005_agent-wars.txt  task_006_agent-wars-frontend.txt  task_006_agent-wars.txt  task_007_agent-wars-frontend.txt  task_007_agent-wars.txt  task_008_agent-wars-backend.txt  task_008_agent-wars.txt  task_009_agent-wars-backend.txt  task_010_agent-wars.txt  task_011_agent-wars.txt  task_012_agent-wars-backend.txt  task_012_agent-wars.txt  task_013.txt  task_013_agent-wars-backend.txt  task_013_agent-wars-frontend.txt  task_014.txt  task_014_agent-wars-backend.txt  task_014_agent-wars-frontend.txt  task_015.txt  task_015_agent-wars-backend.txt  task_015_agent-wars-frontend.txt  task_016.txt  task_016_agent-wars-backend.txt  task_016_agent-wars-frontend.txt  task_017.txt  task_017_agent-wars-backend.txt  task_017_agent-wars-frontend.txt  task_018.txt  task_018_agent-wars-backend.txt  task_018_agent-wars-frontend.txt  task_019.txt  (+19 more)
docs/: landing-3d-graph.md
docs/adr/: 0001-streaming-queue-next.md
scripts/: update_mcp_keys.js
src/agents_wars/: Makefile
src/alert_agent/: __init__.py  __main__.py  ai_processor.py  collector.py  config.py  constants.py  exceptions.py  models.py  notifier.py  orchestrator.py  scheduler.py  summary.py
src/resources/: README.md
tests/: __init__.py  test_basic.py
web/: .eslintrc.cjs  package.json
web/app/: layout.tsx  (+1 more)
(+517 files in other folders)
