[project]
name = "agents"
version = "0.1.0"
description = ""
authors = [
    {name = "Shovael",email = "shovael@alterya.co"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai (>=1.98.0,<2.0.0)",
    "openai-agents (>=0.2.4,<0.3.0)",
    "mcp (>=1.12.3,<2.0.0)",
    "slack-sdk (>=3.36.0,<4.0.0)",
    "playwright (>=1.54.0,<2.0.0)",
    "pytest-playwright (>=0.7.0,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "app_agents", from = "src" },
    { include = "resources", from = "src" }
]
